--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -72,12 +72,12 @@ html {
 
 /* Sidebar links */
 .sidebar a {
-  color: #fff;
+  color: #ffff00;
 }
 
 /* About section */
 .sidebar-about h1 {
-  color: #fff;
+  color: #ffff00;
   margin-top: 0;
   font-family: "Abril Fatface", serif;
   font-size: 3.25rem;
