--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -72,12 +72,12 @@ html {
 
 /* Sidebar links */
 .sidebar a {
-  color: #dd9900;
+  color: #ddaa00;
 }
 
 /* About section */
 .sidebar-about h1 {
-  color: #dd9900;
+  color: #ddaa00;
   margin-top: 0;
   font-family: "Orbitron", san-serif; 
   font-size: 3.25rem;
