--- a/_includes/_open-graph.html
+++ b/_includes/_open-graph.html
@@ -5,10 +5,10 @@
 {% if author.twitter %}<meta name="twitter:creator" content="@{{ author.twitter }}">{% endif %}
 {% if page.image.feature %}
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="{{ site.url }}/images/{{ page.image.feature }}">
+<meta name="twitter:image" content="{{ site.url }}/public/{{ page.image.feature }}">
 {% else %}
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="{% if page.image.thumb %}{{ site.url }}/images/{{ page.image.thumb }}{% else %}{{ site.url }}/images/default-thumb.png{% endif %}">
+<meta name="twitter:image" content="{% if page.image.thumb %}{{ site.url }}/public/{{ page.image.thumb }}{% else %}{{ site.url }}/public/default-thumb.png{% endif %}">
 {% endif %}
 <!-- Open Graph -->
 <meta property="og:locale" content="{{ site.locale }}">
@@ -18,7 +18,7 @@
 <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 <meta property="og:site_name" content="{{ site.title }}">
 {% if page.image.feature %}
-<meta property="og:image" content="{{ site.url }}/images/{{ page.image.feature }}">
+<meta property="og:image" content="{{ site.url }}/public/{{ page.image.feature }}">
 {% else %}
-<meta property="og:image" content="{% if page.image.thumb %}{{ site.url }}/images/{{ page.image.thumb }}{% else %}{{ site.url }}/images/default-thumb.png{% endif %}">
+<meta property="og:image" content="{% if page.image.thumb %}{{ site.url }}/public/{{ page.image.thumb }}{% else %}{{ site.url }}/images/default-thumb.png{% endif %}">
 {% endif %}
