--- a/_includes/_open-graph.html
+++ b/_includes/_open-graph.html
@@ -4,7 +4,7 @@
 {% if site.owner.twitter %}<meta name="twitter:site" content="@{{ site.owner.twitter }}">{% endif %}
 {% if author.twitter %}<meta name="twitter:creator" content="@{{ author.twitter }}">{% endif %}
 {% if page.image.feature %}
-<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:card" content="summary">
 <meta name="twitter:image" content="{{ site.url }}/public/{{ page.image.feature }}">
 {% else %}
 <meta name="twitter:card" content="summary">
